@@ -52,32 +52,26 @@ val all_scala_versions = Seq(scala213)
 val default_scala_version = settingKey[String]("Default Scala version")
 Global / default_scala_version := scala213
 
-val LATEST_RELEASED_SPARK_VERSION = "3.5.7"
-val SPARK_MASTER_VERSION = "4.0.2-SNAPSHOT"
-val sparkVersion = settingKey[String]("Spark version")
+// Scala version to use for all projects
+scalaVersion := default_scala_version.value
+
+// crossScalaVersions must be set to Nil on the root project to avoid conflicts
+crossScalaVersions := Nil
+
 val internalModuleNames = settingKey[Set[String]]("Internal module artifact names to exclude from POM")
-spark / sparkVersion := getSparkVersion()
-sparkV1 / sparkVersion := getSparkVersion()
-sparkV2 / sparkVersion := getSparkVersion()
-connectCommon / sparkVersion := getSparkVersion()
-connectClient / sparkVersion := getSparkVersion()
-connectServer / sparkVersion := getSparkVersion()
-sharing / sparkVersion := getSparkVersion()
+
+// Spark version to delta-spark and its dependent modules
+// For more information see CrossSparkVersions.scala
+val sparkVersion = settingKey[String]("Spark version")
 
 // Dependent library versions
-val defaultSparkVersion = LATEST_RELEASED_SPARK_VERSION
+val defaultSparkVersion = SparkVersionSpec.DEFAULT.fullVersion // Spark version to use for testing in non-delta-spark related modules
 val hadoopVersion = "3.3.4"
 val scalaTestVersion = "3.2.15"
 val scalaTestVersionForConnectors = "3.0.8"
 val parquet4sVersion = "1.9.4"
-
 val protoVersion = "3.25.1"
 val grpcVersion = "1.62.2"
-
-scalaVersion := default_scala_version.value
-
-// crossScalaVersions must be set to Nil on the root project
-crossScalaVersions := Nil
 
 // For Java 11 use the following on command line
 // sbt 'set targetJvm := "11"' [commands]
@@ -86,36 +80,6 @@ Global / targetJvm := "11"
 
 lazy val javaVersion = sys.props.getOrElse("java.version", "Unknown")
 lazy val javaVersionInt = javaVersion.split("\\.")(0).toInt
-/**
- * Returns the current spark version, which is the same value as `sparkVersion.value`.
- *
- * This logic exists in a separate method because some call sites cannot access `sparkVersion.value`
- * e.g. callers that are not inside tasks or setting macros.
- */
-def getSparkVersion(): String = {
-  val latestReleasedSparkVersionShort = getMajorMinorPatch(LATEST_RELEASED_SPARK_VERSION) match {
-    case (maj, min, _) => s"$maj.$min"
-  }
-  val allValidSparkVersionInputs = Seq(
-    "master",
-    "latest",
-    SPARK_MASTER_VERSION,
-    LATEST_RELEASED_SPARK_VERSION,
-    latestReleasedSparkVersionShort
-  )
-
-  // e.g. build/sbt -DsparkVersion=master, build/sbt -DsparkVersion=4.0.0-SNAPSHOT
-  val input = sys.props.getOrElse("sparkVersion", LATEST_RELEASED_SPARK_VERSION)
-  input match {
-    case LATEST_RELEASED_SPARK_VERSION | "latest" | `latestReleasedSparkVersionShort` =>
-      LATEST_RELEASED_SPARK_VERSION
-    case SPARK_MASTER_VERSION | "master" =>
-      SPARK_MASTER_VERSION
-    case _ =>
-      throw new IllegalArgumentException(s"Invalid sparkVersion: $input. Must be one of " +
-          s"${allValidSparkVersionInputs.mkString("{", ",", "}")}")
-  }
-}
 
 lazy val commonSettings = Seq(
   organization := "io.delta",
@@ -185,67 +149,19 @@ def scalafmtCheckSettings(): Seq[Def.Setting[Task[CompileAnalysis]]] = Seq(
  * Note: we cannot access sparkVersion.value here, since that can only be used within a task or
  *       setting macro.
  */
-def crossSparkSettings(): Seq[Setting[_]] = getSparkVersion() match {
-  case LATEST_RELEASED_SPARK_VERSION => Seq(
-    scalaVersion := default_scala_version.value,
-    crossScalaVersions := all_scala_versions,
-    targetJvm := "11",
-    // For adding staged Spark RC versions, e.g.:
-    // resolvers += "Apache Spark 3.5.0 (RC1) Staging" at "https://repository.apache.org/content/repositories/orgapachespark-1444/",
-    Compile / unmanagedSourceDirectories += (Compile / baseDirectory).value / "src" / "main" / "scala-spark-3.5",
-    Test / unmanagedSourceDirectories += (Test / baseDirectory).value / "src" / "test" / "scala-spark-3.5",
-    Antlr4 / antlr4Version := "4.9.3",
-    Test / javaOptions ++= Seq("-Dlog4j.configurationFile=log4j2.properties"),
-
-    unidocSourceFilePatterns := Seq(SourceFilePattern("io/delta/tables/", "io/delta/exceptions/"))
-  )
-
-  case SPARK_MASTER_VERSION => Seq(
-    scalaVersion := scala213,
-    crossScalaVersions := Seq(scala213),
-    targetJvm := "17",
-    Compile / unmanagedSourceDirectories += (Compile / baseDirectory).value / "src" / "main" / "scala-spark-master",
-    Test / unmanagedSourceDirectories += (Test / baseDirectory).value / "src" / "test" / "scala-spark-master",
-    Antlr4 / antlr4Version := "4.13.1",
-    Test / javaOptions ++= Seq(
-      // Copied from SparkBuild.scala to support Java 17 for unit tests (see apache/spark#34153)
-      "--add-opens=java.base/java.lang=ALL-UNNAMED",
-      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-      "--add-opens=java.base/java.io=ALL-UNNAMED",
-      "--add-opens=java.base/java.net=ALL-UNNAMED",
-      "--add-opens=java.base/java.nio=ALL-UNNAMED",
-      "--add-opens=java.base/java.util=ALL-UNNAMED",
-      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
-      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
-      "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
-      "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
-      "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
-      "-Dlog4j.configurationFile=log4j2_spark_master.properties"
-    ),
-    // For Delta Connect tests we create a Spark Distribution from the classpath. For this to work
-    // dependencies on other modules need to be exposed as a JAR, and not as a directory of classes.
-    exportJars := true,
-    // Java-/Scala-/Uni-Doc Settings
-    // This isn't working yet against Spark Master.
-    // 1) delta-spark on Spark Master uses JDK 17. delta-iceberg uses JDK 8 or 11. For some reason,
-    //    generating delta-spark unidoc compiles delta-iceberg
-    // 2) delta-spark unidoc fails to compile. spark 3.5 is on its classpath. likely due to iceberg
-    //    issue above.
-  )
-}
-
 def runTaskOnlyOnSparkMaster[T](
     task: sbt.TaskKey[T],
     taskName: String,
     projectName: String,
     emptyValue: => T): Def.Initialize[Task[T]] = {
-  if (getSparkVersion() == SPARK_MASTER_VERSION) {
+  if (CrossSparkVersions.getSparkVersionSpec().isMaster) {
     Def.task(task.value)
   } else {
     Def.task {
       // scalastyle:off println
+      val masterVersion = SparkVersionSpec.MASTER.map(_.fullVersion).getOrElse("(no master version configured)")
       println(s"Project $projectName: Skipping `$taskName` as Spark version " +
-        s"${getSparkVersion()} does not equal $SPARK_MASTER_VERSION.")
+        s"${CrossSparkVersions.getSparkVersion()} does not equal $masterVersion.")
       // scalastyle:on println
       emptyValue
     }
@@ -257,9 +173,7 @@ lazy val connectCommon = (project in file("spark-connect/common"))
   .settings(
     name := "delta-connect-common",
     commonSettings,
-    crossSparkSettings(),
-    // iceberg-core 1.8.0 brings jackson 2.18.2 thus force upgrade
-    dependencyOverrides += "com.fasterxml.jackson.module" %% "jackson-module-scala" % "2.18.2",
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
     releaseSettings,
     Compile / compile := runTaskOnlyOnSparkMaster(
       task = Compile / compile,
@@ -300,6 +214,7 @@ lazy val connectClient = (project in file("spark-connect/client"))
     name := "delta-connect-client",
     commonSettings,
     releaseSettings,
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
     Compile / compile := runTaskOnlyOnSparkMaster(
       task = Compile / compile,
       taskName = "compile",
@@ -318,7 +233,6 @@ lazy val connectClient = (project in file("spark-connect/client"))
       projectName = "delta-connect-client",
       emptyValue = ()
     ).value,
-    crossSparkSettings(),
     libraryDependencies ++= Seq(
       "com.google.protobuf" % "protobuf-java" % protoVersion % "protobuf",
       "org.apache.spark" %% "spark-connect-client-jvm" % sparkVersion.value % "provided",
@@ -362,6 +276,15 @@ lazy val connectServer = (project in file("spark-connect/server"))
     name := "delta-connect-server",
     commonSettings,
     releaseSettings,
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
+    assembly / assemblyMergeStrategy := {
+      // Discard module-info.class files from Java 9+ modules and multi-release JARs
+      case "module-info.class" => MergeStrategy.discard
+      case PathList("META-INF", "versions", _, "module-info.class") => MergeStrategy.discard
+      case x =>
+        val oldStrategy = (assembly / assemblyMergeStrategy).value
+        oldStrategy(x)
+    },
     Compile / compile := runTaskOnlyOnSparkMaster(
       task = Compile / compile,
       taskName = "compile",
@@ -380,7 +303,6 @@ lazy val connectServer = (project in file("spark-connect/server"))
       projectName = "delta-connect-server",
       emptyValue = ()
     ).value,
-    crossSparkSettings(),
     libraryDependencies ++= Seq(
       "com.google.protobuf" % "protobuf-java" % protoVersion % "protobuf",
 
@@ -414,6 +336,7 @@ lazy val deltaSuiteGenerator = (project in file("spark/delta-suite-generator"))
     name := "delta-suite-generator",
     commonSettings,
     scalaStyleSettings,
+    skipReleaseSettings, // Internal module - not published to Maven
     libraryDependencies ++= Seq(
       "org.scala-lang.modules" %% "scala-collection-compat" % "2.11.0",
       "org.scalameta" %% "scalameta" % "4.13.5",
@@ -438,7 +361,7 @@ lazy val sparkV1 = (project in file("spark"))
     commonSettings,
     scalaStyleSettings,
     skipReleaseSettings, // Internal module - not published to Maven
-    crossSparkSettings(),
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
 
     // Export as JAR instead of classes directory. This prevents dependent projects
     // (e.g., connectServer) from seeing multiple 'classes' directories with the same
@@ -538,7 +461,6 @@ lazy val sparkV1Filtered = (project in file("spark-v1-filtered"))
 // ============================================================
 lazy val sparkV2 = (project in file("kernel-spark"))
   .dependsOn(sparkV1Filtered)
-  .dependsOn(kernelApi)
   .dependsOn(kernelDefaults)
   .dependsOn(goldenTables % "test")
   .settings(
@@ -546,9 +468,19 @@ lazy val sparkV2 = (project in file("kernel-spark"))
     commonSettings,
     javafmtCheckSettings,
     skipReleaseSettings, // Internal module - not published to Maven
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
     exportJars := true,  // Export as JAR to avoid classpath conflicts
 
     Test / javaOptions ++= Seq("-ea"),
+    // make sure shaded kernel-api jar exists before compiling/testing
+    Compile / compile := (Compile / compile)
+      .dependsOn(kernelApi / Compile / packageBin).value,
+    Test / test := (Test / test)
+      .dependsOn(kernelApi / Compile / packageBin).value,
+    Test / unmanagedJars += (kernelApi / Test / packageBin).value,
+    Compile / unmanagedJars ++= Seq(
+      (kernelApi / Compile / packageBin).value
+    ),
     libraryDependencies ++= Seq(
       "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
       "org.apache.spark" %% "spark-core" % sparkVersion.value % "provided",
@@ -585,23 +517,27 @@ lazy val spark = (project in file("spark-unified"))
     sparkMimaSettings,
     releaseSettings, // Published to Maven as delta-spark.jar
 
-    // Set Test baseDirectory before crossSparkSettings() so it uses the correct directory
+    // Set Test baseDirectory before sparkDependentSettings() so it uses the correct directory
     Test / baseDirectory := (sparkV1 / baseDirectory).value,
 
-    // Test sources from spark/ directory (sparkV1's directory)
+    // Test sources from spark/ directory (sparkV1's directory) AND spark-unified's own directory
     // MUST be set BEFORE crossSparkSettings() to avoid overwriting version-specific directories
     Test / unmanagedSourceDirectories := {
       val sparkDir = (sparkV1 / baseDirectory).value
+      val unifiedDir = baseDirectory.value
       Seq(
         sparkDir / "src" / "test" / "scala",
-        sparkDir / "src" / "test" / "java"
+        sparkDir / "src" / "test" / "java",
+        unifiedDir / "src" / "test" / "scala",
+        unifiedDir / "src" / "test" / "java"
       )
     },
     Test / unmanagedResourceDirectories := Seq(
-      (sparkV1 / baseDirectory).value / "src" / "test" / "resources"
+      (sparkV1 / baseDirectory).value / "src" / "test" / "resources",
+      baseDirectory.value / "src" / "test" / "resources"
     ),
 
-    crossSparkSettings(),
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
 
     // MiMa should use the generated JAR (not classDirectory) because we merge classes at package time
     mimaCurrentClassfiles := (Compile / packageBin).value,
@@ -653,7 +589,10 @@ lazy val spark = (project in file("spark-unified"))
         override def transform(n: Node): Seq[Node] = n match {
           case e: Elem if e.label == "dependency" =>
             val artifactId = (e \ "artifactId").text
-            if (internalModules.contains(artifactId)) Seq.empty else Seq(n)
+            // Check if artifactId starts with any internal module name
+            // (e.g., "delta-spark-v1_4.1_2.13" starts with "delta-spark-v1")
+            val isInternal = internalModules.exists(module => artifactId.startsWith(module))
+            if (isInternal) Seq.empty else Seq(n)
           case _ => Seq(n)
         }
       }).transform(node).head
@@ -713,8 +652,8 @@ lazy val spark = (project in file("spark-unified"))
     TestParallelization.settings,
   )
   .configureUnidoc(
-    generatedJavaDoc = getSparkVersion() == LATEST_RELEASED_SPARK_VERSION,
-    generateScalaDoc = getSparkVersion() == LATEST_RELEASED_SPARK_VERSION,
+    generatedJavaDoc = CrossSparkVersions.getSparkVersionSpec().generateDocs,
+    generateScalaDoc = CrossSparkVersions.getSparkVersionSpec().generateDocs,
     // spark-connect has classes with the same name as spark-core, this causes compilation issues
     // with unidoc since it concatenates the classpaths from all modules
     // ==> thus we exclude such sources
@@ -730,6 +669,7 @@ lazy val contribs = (project in file("contribs"))
     commonSettings,
     scalaStyleSettings,
     releaseSettings,
+    CrossSparkVersions.sparkDependentModuleName(sparkVersion),
     Compile / packageBin / mappings := (Compile / packageBin / mappings).value ++
       listPythonFiles(baseDirectory.value.getParentFile / "python"),
 
@@ -773,12 +713,28 @@ lazy val sharing = (project in file("sharing"))
     commonSettings,
     scalaStyleSettings,
     releaseSettings,
-    crossSparkSettings(),
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
     Test / javaOptions ++= Seq("-ea"),
+    Compile / compile := runTaskOnlyOnSparkMaster(
+      task = Compile / compile,
+      taskName = "compile",
+      projectName = "delta-sharing-spark",
+      emptyValue = Analysis.empty.asInstanceOf[CompileAnalysis]
+    ).value,
+    Test / test := runTaskOnlyOnSparkMaster(
+      task = Test / test,
+      taskName = "test",
+      projectName = "delta-sharing-spark",
+      emptyValue = ()).value,
+    publish := runTaskOnlyOnSparkMaster(
+      task = publish,
+      taskName = "publish",
+      projectName = "delta-sharing-spark",
+      emptyValue = ()).value,
     libraryDependencies ++= Seq(
       "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
 
-      "io.delta" %% "delta-sharing-client" % "1.2.4",
+      "io.delta" %% "delta-sharing-client" % "1.3.6",
 
       // Test deps
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
@@ -821,10 +777,14 @@ lazy val kernelApi = (project in file("kernel/kernel-api"))
       "com.fasterxml.jackson.core" % "jackson-annotations" % "2.13.5",
       "com.fasterxml.jackson.datatype" % "jackson-datatype-jdk8" % "2.13.5",
 
+      // JSR-305 annotations for @Nullable
+      "com.google.code.findbugs" % "jsr305" % "3.0.2",
+
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
       "junit" % "junit" % "4.13.2" % "test",
       "com.novocode" % "junit-interface" % "0.11" % "test",
-      "org.slf4j" % "slf4j-log4j12" % "1.7.36" % "test",
+      "org.apache.logging.log4j" % "log4j-slf4j-impl" % "2.20.0" % "test",
+      "org.apache.logging.log4j" % "log4j-core" % "2.20.0" % "test",
       "org.assertj" % "assertj-core" % "3.26.3" % "test",
       // JMH dependencies allow writing micro-benchmarks for testing performance of components.
       // JMH has framework to define benchmarks and takes care of many common functionalities
@@ -931,7 +891,8 @@ lazy val kernelDefaults = (project in file("kernel/kernel-defaults"))
       "junit" % "junit" % "4.13.2" % "test",
       "commons-io" % "commons-io" % "2.8.0" % "test",
       "com.novocode" % "junit-interface" % "0.11" % "test",
-      "org.slf4j" % "slf4j-log4j12" % "1.7.36" % "test",
+      "org.apache.logging.log4j" % "log4j-slf4j-impl" % "2.20.0" % "test",
+      "org.apache.logging.log4j" % "log4j-core" % "2.20.0" % "test",
       // JMH dependencies allow writing micro-benchmarks for testing performance of components.
       // JMH has framework to define benchmarks and takes care of many common functionalities
       // such as warm runs, cold runs, defining benchmark parameter variables etc.
@@ -950,22 +911,53 @@ lazy val kernelDefaults = (project in file("kernel/kernel-defaults"))
     unidocSourceFilePatterns += SourceFilePattern("io/delta/kernel/"),
   ).configureUnidoc(docTitle = "Delta Kernel Defaults")
 
-lazy val unity = (project in file("unity"))
+lazy val kernelBenchmarks = (project in file("kernel/kernel-benchmarks"))
   .enablePlugins(ScalafmtPlugin)
-  .dependsOn(kernelApi % "compile->compile;test->test")
+  .dependsOn(kernelDefaults % "test->test")
+  .dependsOn(kernelApi % "test->test")
+  .dependsOn(storage % "test->test")
+  .dependsOn(kernelUnityCatalog % "test->test")
+  .settings(
+    name := "delta-kernel-benchmarks",
+    commonSettings,
+    skipReleaseSettings,
+    exportJars := false,
+    javafmtCheckSettings,
+    scalafmtCheckSettings,
+    
+    libraryDependencies ++= Seq(
+      "org.openjdk.jmh" % "jmh-core" % "1.37" % "test",
+      "org.openjdk.jmh" % "jmh-generator-annprocess" % "1.37" % "test",
+    ),
+  )
+
+lazy val kernelUnityCatalog = (project in file("kernel/unitycatalog"))
+  .enablePlugins(ScalafmtPlugin)
   .dependsOn(kernelDefaults % "test->test")
   .dependsOn(storage)
   .settings (
-    name := "delta-unity",
+    name := "delta-kernel-unitycatalog",
     commonSettings,
     javaOnlyReleaseSettings,
     javafmtCheckSettings,
     javaCheckstyleSettings("dev/kernel-checkstyle.xml"),
     scalaStyleSettings,
     scalafmtCheckSettings,
+
+    // Put the shaded kernel-api JAR on the classpath (compile & test)
+    Compile / unmanagedJars += (kernelApi / Compile / packageBin).value,
+    Test / unmanagedJars += (kernelApi / Compile / packageBin).value,
+
+    // Make sure the shaded JAR is produced before we compile/run tests
+    Compile / compile := (Compile / compile).dependsOn(kernelApi / Compile / packageBin).value,
+    Test / test       := (Test    / test).dependsOn(kernelApi / Compile / packageBin).value,
+    Test / unmanagedJars += (kernelApi / Test / packageBin).value,
+
     libraryDependencies ++= Seq(
       "org.apache.hadoop" % "hadoop-common" % hadoopVersion % "provided",
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
+      "org.apache.logging.log4j" % "log4j-slf4j-impl" % "2.20.0" % "test",
+      "org.apache.logging.log4j" % "log4j-core" % "2.20.0" % "test",
     ),
     unidocSourceFilePatterns += SourceFilePattern("src/main/java/io/delta/unity/"),
   ).configureUnidoc()
@@ -1062,6 +1054,7 @@ lazy val iceberg = (project in file("iceberg"))
     commonSettings,
     scalaStyleSettings,
     releaseSettings,
+    CrossSparkVersions.sparkDependentModuleName(sparkVersion),
     libraryDependencies ++= Seq(
       // Fix Iceberg's legacy java.lang.NoClassDefFoundError: scala/jdk/CollectionConverters$ error
       // due to legacy scala.
@@ -1072,7 +1065,9 @@ lazy val iceberg = (project in file("iceberg"))
     Compile / unmanagedJars += (icebergShaded / assembly).value,
     // Generate the assembly JAR as the package JAR
     Compile / packageBin := assembly.value,
-    assembly / assemblyJarName := s"${name.value}_${scalaBinaryVersion.value}-${version.value}.jar",
+    assembly / assemblyJarName := {
+      s"${moduleName.value}_${scalaBinaryVersion.value}-${version.value}.jar"
+    },
     assembly / logLevel := Level.Info,
     assembly / test := {},
     assembly / assemblyExcludedJars := {
@@ -1158,7 +1153,7 @@ lazy val icebergShaded = (project in file("icebergShaded"))
       ShadeRule.rename("org.apache.iceberg.**" -> "shadedForDelta.@0").inAll
     ),
     assembly / assemblyExcludedJars := {
-      val cp = (fullClasspath in assembly).value
+      val cp = (assembly / fullClasspath).value
       cp.filter { jar =>
         val doExclude = jar.data.getName.contains("jackson-annotations") ||
           jar.data.getName.contains("RoaringBitmap")
@@ -1554,7 +1549,7 @@ lazy val icebergGroup = project
   )
 
 lazy val kernelGroup = project
-  .aggregate(kernelApi, kernelDefaults)
+  .aggregate(kernelApi, kernelDefaults, kernelBenchmarks)
   .settings(
     // crossScalaVersions must be set to Nil on the aggregating project
     crossScalaVersions := Nil,
@@ -1686,8 +1681,9 @@ releaseProcess := Seq[ReleaseStep](
   runTest,
   setReleaseVersion,
   commitReleaseVersion,
-  tagRelease,
-  releaseStepCommandAndRemaining("+publishSigned"),
+  tagRelease
+) ++ CrossSparkVersions.crossSparkReleaseSteps("+publishSigned") ++ Seq[ReleaseStep](
+
   // Do NOT use `sonatypeBundleRelease` - it will actually release to Maven! We want to do that
   // manually.
   //
